new package installed

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "request": "^2.88.2",
     "save": "^2.4.0",
     "split": "^1.0.1",
+    "vuejs-paginate": "^2.1.0",
     "weld": "^0.2.2"
   }
 }
