--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "homepage": "https://github.com/iTalantaAcademy-kakuma-1/GROUP-2#readme",
   "dependencies": {
+    "js": "^0.1.0",
+    "moment": "^2.29.1",
     "optimist": "^0.6.1",
     "request": "^2.88.2",
     "save": "^2.4.0",
